# nv-hgb

./: .gitignore
des/ue01/: ue01.docx
des/ue01/vp/: des_ue01.vpp
des/ue02/: ue02.docx
des/ue02/src/: queries.sql
des/ue03/: ue03.docx
des/ue03/src/: queries.sql
des/ue04/: ue04.docx
des/ue04/src/: queries.sql
des/ue05/latex/: DES33_UE05_VEST.aux  DES33_UE05_VEST.lol  DES33_UE05_VEST.tex
des/ue05/src/: DES33_UE05_VEST.sql
des/ue06/: ue06.odt
des/ue06/src/: DES33_UE06_VEST.sql
des/ue07/: ue07.odt
des/ue07/src/: DES33_UE07_VEST.sql
des/ue08/: ue08.odt
des/ue08/src/: DES33_UE08_VEST.sql
des/ue09/: DES33_UE09_VEST.xoj
des/ue10/: DES33_UE10_VEST_1.xoj  ue10.odt
des/ue10/src/: DES33_UE10_VEST.sql
des/ue11/: ue11.odt
des/ue11/src/: DES33_UE11_VEST.sql
des/ue12/: finalize.sh  ue12.odt
des/ue12/src/: DES33_UE12_HOFFMANN_VEST_CREATE_INSERT.sql  DES33_UE12_HOFFMANN_VEST_QUERIES.sql
mas/: .gitignore
mas/mathematica/: a13.nb  a14.nb  a15.nb  a16.nb  a17.nb  a18.nb  a19.nb  a20.nb  a21.nb  a22.nb  a23.nb  a24.nb  a25.nb
mas/xournal/: A26.xoj  A27.xoj  A28.xoj  A29.xoj  A30.xoj  A31.xoj  A32.xoj  A33.xoj  A34.xoj  A35.xoj  A36.xoj  A37.xoj  A39.xoj  A41.xoj  A43.xoj  A45.xoj  A46.xoj  A47.xoj  A48.xoj  A49.xoj  A50.xoj  A51.xoj
swo/ue01/doc/: Ausarbeitung-01.docx
swo/ue01/src/nova/: nova.c
swo/ue01/src/poly/: cli_parser.c  cli_parser.h  polycirc.c
swo/ue02/: CMakeLists.txt
swo/ue02/doc/: Ausarbeitung-02.docx
swo/ue02/src/gross/: gross.c
swo/ue02/src/hamming/: hamming.c
swo/ue02/src/sort/: sort.c
swo/ue03/: CMakeLists.txt
swo/ue03/doc/: Ausarbeitung-03.docx
swo/ue03/pipe/: pipe.c
swo/ue03/src/pipe/: pipe.c
swo/ue03/src/sudoku/: Sudoku.c  Sudoku.h  main.c
swo/ue03/sudoku/: Sudoku.c  Sudoku.h  SudokuField.c  SudokuField.h  main.c
swo/ue04/: CMakeLists.txt
swo/ue04/doc/: Ausarbeitung-04.odt
swo/ue04/src/lis/: main.c
swo/ue04/src/team/: list.c  list.h  main.c  team.c  team.h
swo/ue05/: CMakeLists.txt
swo/ue05/src/: CMakeLists.txt
swo/ue05/src/adt/: directed_graph.c  directed_graph.h  directed_graph_list.c  directed_graph_mat.c  graph_types.h  main.c  node_list.c  node_list.h
swo/ue05/src/include/: unic.h
swo/ue05/src/top/: main.c
swo/ue06/: CMakeLists.txt
swo/ue06/src/: CMakeLists.txt
swo/ue06/src/tetris/: gameboard.c  gameboard.h  main.c  tetromino.c  tetromino.h
swo/ue07/: CMakeLists.txt
swo/ue07/src/: CMakeLists.txt
swo/ue07/src/graph/: graph.hpp  main.cpp  vertex.hpp
swo/ue07/src/wmb/: car.cpp  car.hpp  main.cpp  motor.cpp  motor.hpp  wheel.cpp  wheel.hpp
swo/ue08/: CMakeLists.txt
swo/ue08/doc/: output.txt
swo/ue08/src/: CMakeLists.txt
swo/ue08/src/chess/: Board.cpp  Board.hpp  Chess.cpp  Chessboard.cpp  Chessboard.hpp  Chessman.cpp  Chessman.hpp  Game.cpp  Game.hpp  Types.hpp  main.cpp
swo/ue09/: CMakeLists.txt
swo/ue09/src/: CMakeLists.txt
swo/ue09/src/deque/: _iterator.hpp  deque.hpp  main.cpp
swo/ue10/: CMakeLists.txt
swo/ue10/ml5/: CMakeLists.txt  homework-template-CMakeLists.txt
swo/ue10/ml5/inc/ml5/: ml5.h
swo/ue10/ml5/inc/ml5/base/: integer.h  object.h  string.h  value.h  value.inl
swo/ue10/ml5/inc/ml5/container/: collection.h  container.h  container.inl  iterator.h  iterator_adapter.h  iterator_adapter.inl  vector.h  vector.inl  vector_iterator.h  vector_iterator.inl
swo/ue10/ml5/inc/ml5/gui/: application.h  application.inl  events.h  window.h
swo/ue10/ml5/inc/ml5/gui/impl/: gl.h  impl_application.h  impl_canvas.h  impl_frame.h  wx.h
swo/ue10/ml5/inc/ml5/metainfo/: metainfo.h  metainfo.inl  metainfo_base.h  metainfo_helper.h  metainfo_injector.h  metainfo_registry.h
swo/ue10/ml5/inc/ml5/utility/: constants.h  detection.h  forwards.h  libraries.h  macros.h  traits.h  utility.h  windows.h
swo/ue10/ml5/src/base/: object.cpp
swo/ue10/ml5/src/gui/: application.cpp  events.cpp  window.cpp
swo/ue10/ml5/src/gui/impl/: impl_application.cpp  impl_canvas.cpp  impl_frame.cpp
swo/ue10/ml5/src/metainfo/: metainfo_base.cpp  metainfo_registry.cpp
swo/ue10/src/draw/: draw.cpp
swo/ue10/src/draw/gui/: draw_window.cpp  tool_bar.cpp
swo/ue10/src/draw/include/: arrow.h  draw_application.h  draw_window.h  ellipse.h  line.h  rectangle.h  shape.h  shape_registry.h  tool_bar.h
